--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         document.onreadystatechange = () => {
               if (document.readyState === 'complete') {
                 document.getElementById('navigation').style.display="";
+                console.log('document ready')
               }
             };
     </script>
