--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Rahul Raj K</title>
     <link rel="stylesheet" type="text/css" href="css\style.css">
+    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 </head>
-<body>
+<body> 
     <section class="banner" id="sec">
         <header>
             <a href="#" class="logo">INTERPRETER</a>
@@ -12,7 +13,9 @@
         </header>
         <div class="content">
             <h2>Hello World,<br>I'm <span>Rahul Raj K</span></h2>
-            <p>I'm an Android developer with two years of experience in developing Android applications using Android Studio. I'm well versed in Java, and have developed Java applications in NetBeans. I love coding and problem solving. I used to program in Java, Python and C. I use PHP, NodeJS, Postgres SQL for backend. Not only an Android developer, have more experience in Web application development using HTML, CSS, Javascript, Ajax , Flask and Django(Advanced).</p>
+            <!-- <p>UI & UX Engineer,<br>Full Stack Developer</p> -->
+            <h2 style="font-size: 2.3em;color: #40c3ff">UI & UX,<br> Full Stack Developer</h2><br>
+            <p> An young enthusiastic human being, interested in exploring and utilizing the present and upcoming technologies. Love solving real time problems with more efficiency and scalability.</p>
             <a href="#">Know More</a>
         </div>
         <ul class="sci">
@@ -21,32 +24,107 @@
             <li><a href="#"><img src="images\linkedin.png"></a></li>
         </ul>
     </section>
+
+
+    <!-- First  Navigation -->
     <div id="navigation" style="display: none">
+        <!-- <div id="navigation"> -->
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#" id="abtnav">About</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Porfolio</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </div>
+
+    <section class="aboutsection" id="abt">
+        <header>
+            <a href="#" class="logo">INTERPRETER</a>
+            <div id="toggle" onclick="toggle2()"></div>
+        </header>
+        <div class="content">
+            <h2><span>Let Me Introduce Myself</span></h2><br>
+            <p>I'm an Android developer with two years of experience in developing Android applications using Android Studio. I'm well versed in Java, and have developed Java applications in NetBeans. I love coding and problem solving. I used to program in Java, Python and C. I use PHP, NodeJS, Postgres SQL for backend. Not only an Android developer, have more experience in Web application development using HTML, CSS, Javascript, Ajax , Flask and Django(Advanced).</p>
+            <a href="">Know More</a>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
     <script type="text/javascript">
-        setTimeout(function() {
-            window.alert("Website Under Development")
-        }, 10000);
+        // setTimeout(function() {
+        //     window.alert("Website Under Development")
+        // }, 10000);
+        var t_toggle1 = false;
         function toggle(){  
+            //First Section 
             var sec = document.getElementById('sec');
             var nav = document.getElementById('navigation');
             sec.classList.toggle('active');
             nav.classList.toggle('active');
+            if (!t_toggle1) {
+                t_toggle1 = true;
+                document.getElementById('navigation').style.display="";  
+            }    
+            else{
+                t_toggle1 = false;
+                if (t_toggle2) {
+
+                }
+                else{
+                    setTimeout(function() {
+                        document.getElementById('navigation').style.display="none";  
+                    }, 500);
+                }
+            }  
         }
 
-        document.onreadystatechange = () => {
-              if (document.readyState === 'complete') {
-                document.getElementById('navigation').style.display="";
-                console.log('document ready')
-              }
-            };
+        //Second Section
+        var t_toggle2 = false;
+        function toggle2(){  
+            var abt = document.getElementById('abt');
+            var nav2 = document.getElementById('navigation');
+            abt.classList.toggle('active');
+            nav2.classList.toggle('active');
+            if (!t_toggle2) {
+                t_toggle2 = true;
+                document.getElementById('navigation').style.display="";  
+            }    
+            else{
+                t_toggle2 = false;
+                if (t_toggle1) {
+
+                }
+                else{
+                    setTimeout(function() {
+                        document.getElementById('navigation').style.display="none";  
+                    }, 500);
+                }
+            }
+        }
+
+        // document.onreadystatechange = () => {
+        //       if (document.readyState === 'complete') {
+        //         document.getElementById('navigation').style.display="";
+        //         console.log('document ready')
+        //       }
+        //     };
+
+        $("#abtnav").click(function() {
+            $('html,body').animate({
+                scrollTop: $(".aboutsection").offset().top},
+                'slow');
+        });
+
     </script>
 </body>
 </html>
