--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Rahul Raj K</title>
     <link rel="stylesheet" type="text/css" href="css\style.css">
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+    <meta name="theme-color" content="#000000" />
 </head>
 <body> 
     <section class="banner" id="sec">
