--- a/index.html
+++ b/index.html
@@ -2,60 +2,143 @@
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Rahul Raj K</title>
-    <link rel="stylesheet" type="text/css" href="css\style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css\style.css"> -->
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script> -->
+    <!-- <script type="text/javascript" src="jquery.onepage-scroll.js"></script> -->
+    <!-- <link href='onepage-scroll.css' rel='stylesheet' type='text/css'> -->
+    <!-- <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no"> -->
     <meta name="theme-color" content="#000000" />
+<link rel="stylesheet" type="text/css" href="css\style.css">
+    <style>
+
+    </style>
 </head>
 <body> 
-    <section class="banner" id="sec">
-        <header>
-            <a href="#" class="logo">INTERPRETER</a>
-            <div id="toggle" onclick="toggle()"></div>
-        </header>
-        <div class="content">
-            <h2>Hello World,<br>I'm <span>Rahul Raj K</span></h2>
-            <!-- <p>UI & UX Engineer,<br>Full Stack Developer</p> -->
-            <h2 style="font-size: 2.3em;color: #40c3ff">UI & UX,<br> Full Stack Developer</h2><br>
-            <p> An young enthusiastic human being, interested in exploring and utilizing the present and upcoming technologies. Love solving real time problems with more efficiency and scalability.</p>
-            <a href="#">Know More</a>
-        </div>
-        <ul class="sci">
-            <li><a href="#"><img src="images\facebook.png"></a></li>
-            <li><a href="#"><img src="images\twitter.png"></a></li>
-            <li><a href="#"><img src="images\linkedin.png"></a></li>
-        </ul>
-    </section>
+    <div class="wrapper">
+    <div class="main">
+        <section class="banner" id="sec">
+            <header>
+                <a href="#" class="logo">INTERPRETER</a>
+                <div id="toggle" onclick="toggle()"></div>
+            </header>
+            <div class="content">
+                <h2>Hello World,<br>I'm <span>Rahul Raj K</span></h2>
+                <!-- <p>UI & UX Engineer,<br>Full Stack Developer</p> -->
+                <h2 style="font-size: 2.3em;color: #40c3ff">UI & UX,<br> Full Stack Developer</h2><br>
+                <p> An young enthusiastic human being, interested in exploring and utilizing the present and upcoming technologies. Love solving real time problems with moe effriciency and scalability.</p>
+                <a href="#">Know More</a>
+            </div>
+            <ul class="sci">
+                <li><a href="#"><img src="images\facebook.png"></a></li>
+                <li><a href="#"><img src="images\twitter.png"></a></li>
+                <li><a href="#"><img src="images\linkedin.png"></a></li>
+            </ul>
+        </section>
 
+        <section class="aboutsection" id="abt">
+            <header>
+                <a href="#" class="logo">INTERPRETER</a>
+                <div id="toggle" onclick="toggle2()"></div>
+            </header>
+            <div class="content">
+                <h2><span>Let Me Introduce Myself</span></h2><br>
+                <p>I'm an Android developer with two years of experience in developing Android applications using Android Studio. I'm well versed in Java, and have developed Java applications in NetBeans. I love coding and problem solving. I used to program in Java, Python and C. I use PHP, NodeJS, Postgres SQL for backend. Not only an Android developer, have more experience in Web application development using HTML, CSS, Javascript, Ajax , Flask and Django(Advanced).</p>    
+                <a href="">Know More</a>
+            </div>
+        </section>
 
-    <!-- First  Navigation -->
-    <div id="navigation" style="display: none">
-        <!-- <div id="navigation"> -->
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#" id="abtnav">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+        <section class="education" id="edu">
+            <header>
+                <a href="#" class="logo">INTERPRETER</a>
+                <div id="toggle" onclick="toggle2()"></div>
+            </header>
+            <div class="content container-fluid">
+                <h2><span>My Studies...</span></h2><br>
+
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="card" style="width: 60%;">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-lg-2">
+                                    <h5 class="studies" style="color:#40c3ff;">B.E</h5>
+                                </div>
+                                <div class="col-lg-7 studies_content">
+                                    <p>Chennai Institute Of Technology</p>
+                                </div>
+                                <div class="col col-lg-3">
+                                    <h5 class="studies direction" style="color:#40c3ff;">8.62</h5>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="card"  style="width: 80%;">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-lg-2">
+                                    <h5 class="studies" style="color:#40c3ff;">HSC</h5>
+                                </div>
+                                <div class="col col-lg-7 studies_content">
+                                    <p>Glory Matriculation Hr. Sec. School</p>
+                                </div>
+                                <div class="col col-lg-3">
+                                    <h5 class="studies direction" style="color:#40c3ff;">93.75%</h5>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="row">    
+                    <div class="card"  style="width: 100%;">
+                        <div class="card-body">
+                           <div class="row">
+                                <div class="col-lg-2 col-md-3 col-sm-4">
+                                    <h5 class="studies" style="color:#40c3ff;">SSLC</h5>
+                                </div>
+                                <div class="col col-lg-8 studies_content">
+                                    <p>Glory Matriculation Hr. Sec. School</p>
+                                </div>
+                                <div class="col col-lg-2">
+                                    <h5 class="studies direction" style="color:#40c3ff;">97.6%</h5>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+            </div>
+        </section>
+
     </div>
+</div>
 
-    <section class="aboutsection" id="abt">
-        <header>
-            <a href="#" class="logo">INTERPRETER</a>
-            <div id="toggle" onclick="toggle2()"></div>
-        </header>
-        <div class="content">
-            <h2><span>Let Me Introduce Myself</span></h2><br>
-            <p>I'm an Android developer with two years of experience in developing Android applications using Android Studio. I'm well versed in Java, and have developed Java applications in NetBeans. I love coding and problem solving. I used to program in Java, Python and C. I use PHP, NodeJS, Postgres SQL for backend. Not only an Android developer, have more experience in Web application development using HTML, CSS, Javascript, Ajax , Flask and Django(Advanced).</p>    
-            <a href="">Know More</a>
+
+        <!-- First  Navigation -->
+        <div id="navigation" style="display: none">
+            <div id="navigation">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#" id="abtnav">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
         </div>
-    </section>
 
 
-
-
-
-
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 
 
@@ -63,6 +146,7 @@
 
     <script type="text/javascript">
 
+    
         var t_toggle1 = false;
         function toggle(){  
             //First Section 
@@ -111,13 +195,13 @@
             }
         }
 
-        document.onreadystatechange = () => {
-              if (document.readyState === 'complete') {
-                setTimeout(function() {
-                    window.alert("Developer says 'He is still developing the website!!!'");
-                }, 5000);
-              }
-            };
+        // document.onreadystatechange = () => {
+        //       if (document.readyState === 'complete') {
+        //         setTimeout(function() {
+        //             window.alert("Developer says 'He is still developing the website!!!'");
+        //         }, 5000);
+        //       }
+        //     };
 
         $("#abtnav").click(function() {
             $('html,body').animate({
