--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                 <a href="#" class="logo">INTERPRETER</a>
                 <div id="toggle" onclick="toggle3()"></div>
             </header>
-            <div class="content container-fluid">
+            <div class="content">
                 <h2><span>My Studies...</span></h2><br>
 
-            <div class="container-fluid">
+            <div class="">
                 <div class="row">
                     <div class="card" style="width: 60%;">
                         <div class="card-body">
