--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a href="#" class="logo">INTERPRETER</a>
                 <div id="toggle" onclick="toggle3()"></div>
             </header>
-            <div class="content">
+            <div class="content" style="width: 100%">
                 <h2><span>My Studies...</span></h2><br>
 
             <div class="">
